--- a/FINAL_POO/src/final_poo/GestionLaptop.form
+++ b/FINAL_POO/src/final_poo/GestionLaptop.form
@@ -199,7 +199,7 @@
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="panelAlmacenamiento" pref="0" max="32767" attributes="0"/>
+                      <Component id="panelAlmacenamiento" max="32767" attributes="0"/>
                       <Component id="panelLProcesador1" alignment="0" pref="0" max="32767" attributes="0"/>
                       <Component id="panelLProcesador" alignment="0" max="32767" attributes="0"/>
                   </Group>
@@ -296,7 +296,7 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
                       <Component id="cmbRAM" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="43" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
