--- a/FINAL_POO/src/final_poo/GestionLaptop.form
+++ b/FINAL_POO/src/final_poo/GestionLaptop.form
@@ -46,10 +46,10 @@
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                          <Component id="panePiezas" alignment="0" max="32767" attributes="0"/>
                           <Component id="cbxActivar1" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="cbxActivar2" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="panelLPrearmadas" alignment="0" max="32767" attributes="0"/>
+                          <Component id="panePiezas" alignment="0" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
@@ -201,13 +201,15 @@
                       <Component id="panelRam" max="32767" attributes="0"/>
                       <Component id="panelLProcesador" max="32767" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="panelBateria" max="32767" attributes="0"/>
-                      <Component id="panelLProcesador1" max="32767" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="102" attributes="0">
+                          <Component id="panelLProcesador1" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+                          <Component id="panelAlmacenamiento" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <Component id="panelBateria" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
-                  <Component id="panelAlmacenamiento" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
@@ -221,15 +223,10 @@
                       <Component id="panelLProcesador1" alignment="0" pref="0" max="32767" attributes="0"/>
                       <Component id="panelLProcesador" alignment="0" max="32767" attributes="0"/>
                   </Group>
+                  <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" attributes="0">
-                          <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
-                          <Component id="panelRam" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="panelBateria" min="-2" max="-2" attributes="0"/>
-                      </Group>
+                      <Component id="panelRam" min="-2" max="-2" attributes="0"/>
+                      <Component id="panelBateria" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="23" max="32767" attributes="0"/>
               </Group>
@@ -328,7 +325,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="cmbRAM" pref="0" max="32767" attributes="0"/>
+                      <Component id="cmbRAM" pref="112" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -538,10 +535,14 @@
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="rbtnL7" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="rbtnL5" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="rbtnL9" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="rbtnL5" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace pref="43" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
